style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Roboto", sans-serif;
    scroll-behavior: smooth
}

body {
    background-color: rgb(250, 250, 250);
}

/* NAV */

.menu {
    position: fixed;
    left: 0;
    right: 0;
    font-size: 18px;
    top: -15vh;
    background-color: white;
    transition: 0.3s;
}

.menu ul {
    padding: 1% 0 5% 10%;
}

.menu ul li {
    list-style-type: none;
}

ul li a {
    display: block;
    padding: 2px;
    color: rgb(53, 53, 53);
    line-height: 100%;
    font-size: 16px;
    letter-spacing: 2px;
    text-decoration: none;
    text-transform: uppercase;
}

ul li a:hover {
    color: rgb(0, 151, 0);
}

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 5vh;
    background-color: white;
    z-index: 2;
    color: rgb(0, 0, 0);
    display: flex;
    justify-content: space-between;
}

.logo {
    align-self: center;

}

.logo span {
    color: rgb(0, 151, 0);
    padding-left: 10px;
}

.logo a {
    font-size: 18px;
    letter-spacing: 2px;
    text-decoration: none;
    text-transform: uppercase;
    color: rgb(0, 0, 0);
}

.burger {
    align-self: center;
    padding-right: 10px;
    font-size: 18px;
}

.active {
    top: 5vh;
}

@media (min-width: 768px) and (orientation: portrait) {

    ul li a {
        font-size: 18px;
    }

    .logo span {
        padding-left: 50px;
    }

    .logo a {
        font-size: 20px;
    }

    .burger {
        padding-right: 20px;
        font-size: 20px;
    }

}

@media (min-width: 1024px) and (orientation: portrait) {
    .menu {
        left: 40%;
        right: 0;
        top: 0;
        z-index: 3;
    }

    .menu ul {
        display: flex;
        justify-content: space-around;
        align-items: center;
        padding: 0;
        height: 5vh;
    }

    ul li a {
        padding: 20px 10px;
        color: black;
        font-size: 20px;
        letter-spacing: 0px;
    }

    .logo span {
        padding-left: 20px;
    }

    .logo a {
        font-size: 22px;
    }

    .burger {
        display: none;
    }
}

@media (min-width: 640px) and (orientation: landscape) {
    .menu {
        top: -30vh;
    }

    .navbar {
        height: 10vh;
    }

    .active {
        top: 10vh;
    }

}

/* HEADER */

header {
    background-image: url(img/header.jpg);
    background-position: center;
    color: white;
    height: 100vh;
}

.wrap {
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
}


header .wrap h1 {
    text-transform: uppercase;
    text-shadow: 2px 2px black;
    padding: 50% 5% 10% 5%;
    font-size: 46px;
    text-align: center;
}

header .wrap p {
    padding: 5%;
    font-size: 16px;
    color: rgb(238, 238, 238);
    text-align: center;
}

header .wrap button {
    margin: 10% auto;
}

.btn {
    display: block;
    padding: 10px 20px;
    font-size: 18px;
    color: white;
    border: 1px solid rgb(0, 100, 0);
    border-radius: 25%;
    background-color: rgb(0, 151, 0);
    -moz-border-radius: 38px;
    -webkit-border-radius: 38px;
    text-transform: uppercase;
    transition: 0.3s;
    cursor: pointer;
}

@media (min-width: 768px) and (orientation: portrait) {
    header .wrap h1 {
        padding: 40% 5% 10% 5%;
        font-size: 54px;
    }

    header .wrap p {
        font-size: 28px;
    }

    .btn {
        padding: 20px 30px;
        font-size: 22px;
    }
}

@media (min-width: 1024px) and (orientation: portrait) {
    header {
        height: 50vh;
    }

    .wrap {
        height: 50vh;
    }

    header .wrap h1 {
        padding: 30% 5% 1% 5%;
    }

    header .wrap p {
        padding: 1%;
    }
}

@media (min-width: 640px) and (orientation: landscape) {
    header .wrap h1 {
        padding: 12% 5% 0% 5%;
    }

    header .wrap p {
        padding: 2%;
    }

    header .wrap button {
        margin: 3% auto;
    }

}

/* SECTION FEATURES */

.features h1 {
    font-size: 36px;
    text-transform: uppercase;
    text-align: center;
    padding: 15% 5% 5% 5%;
}

.features p {
    font-size: 18px;
    text-align: center;
    color: rgb(53, 53, 53);
    padding: 0 5%;
}

.feature {
    text-align: center;
    padding: 10%;
}

.feature h2 {
    font-size: 26px;
}

.feature span {
    font-size: 68px;
    padding-bottom: 10px;
}

@media (min-width: 768px) and (orientation: portrait) {
    .features h1 {
        font-size: 40px;
        padding: 10% 5% 2% 5%;
    }

    .features p {
        font-size: 22px;
        padding: 2% 5%;
    }

    .feature {
        padding: 5%;
    }

    .feature h2 {
        font-size: 30px;
    }

    .feature span {
        font-size: 85px;
        padding-bottom: 15px;
    }
}

@media (min-width: 1024px) and (orientation: portrait) {
    .features {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: space-around;
        flex-basis: 100%;
    }

    .features h1 {
        flex-basis: 100%;
        font-size: 40px;
        padding: 10% 5% 1% 5%;
    }

    .features p {
        flex-basis: 100%;
        font-size: 28px;
        padding: 1% 5% 5% 5%;
    }

    .feature {
        flex-basis: 33%;
        padding: 5% 3%;
    }

    .feature h2 {
        font-size: 30px;
    }

    .feature span {
        font-size: 70px;
        padding-bottom: 10px;
    }
}

@media (min-width: 640px) and (orientation: landscape) {
    .features h1 {
        padding: 5% 5% 1% 5%;
    }


    .feature {
        padding: 3%;
    }

    .feature span {
        padding-bottom: 5px;
    }
}

/* SECTION ABOUT */
.about {
    display: flex;
}

.about .fa-cog {
    display: none;
    color: #535353;
}

.about .wrapper {
    background-image: url(img/mountain.jpg);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    color: white;
}

.bgopacity {
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.7);
}
/* ... */

